# llm-posttraining-ops

./: .dockerignore  .gitignore  CHANGELOG.md  CITATION.cff  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
.venv-1/: pyvenv.cfg
configs/: default.yaml
docs/: architecture.md  evaluation_methodology.md  interview_notes.md  model_card.md  release_checklist.md
reports/: baseline_eval_report.md  dataset_card.md  dpo_report.md  eval_suite_report.md  monitoring_report.md  pairwise_comparison_report.md  release_gate_report.md  sft_report.md  workflow_report.md
scripts/: docker_smoke_test.sh  run_workflow_smoke.sh  smoke_api.sh
tests/: test_baselines.py  test_cli.py  test_config.py  test_dpo_checkpoint.py  test_dpo_config.py  test_dpo_report.py  test_dpo_training.py  test_eval_suite.py  test_evaluator.py  test_generation.py  test_huggingface_generator.py  test_inference_config.py  test_inference_prompts.py  test_ingestion.py  test_jsonl.py  test_metrics.py  test_model_evaluation.py  test_monitoring.py  test_normalization.py  test_pairwise.py  test_preference_ingestion.py  test_preference_normalization.py  test_preference_profiling.py  test_preference_validation.py  test_profiling.py  test_release_gate.py  test_report.py  test_serving_api.py  test_serving_logging.py  test_sft_checkpoint.py  test_sft_config.py  test_sft_formatting.py  test_sft_report.py  test_sft_tokenization.py  test_sft_training.py  test_suite_reports.py  test_validation.py  test_workflow_manifest.py  test_workflow_registry.py  test_workflow_runner.py
(+74 files in other folders)
