[project]
name = "llm-posttraining-ops"
version = "0.1.0"
description = "End-to-end LLM fine-tuning and evaluation system with SFT, preference tuning, evaluation, serving, and monitoring."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "accelerate>=1.0",
    "peft>=0.13,<1",
    "pyyaml>=6.0",
    "torch>=2.1",
    "transformers>=4.40,<5",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
llm-posttraining-ops = "llm_posttraining_ops.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
